--- a/src/22-Express/package.json
+++ b/src/22-Express/package.json
@@ -5,6 +5,8 @@
   "main": "notasExpress.js",
   "type": "module",
   "scripts": {
+    "dev": "node --watch index.js",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
