--- a/src/Components/proyecto_final/package.json
+++ b/src/Components/proyecto_final/package.json
@@ -14,6 +14,7 @@
     "nodemon": "^3.0.1"
   },
   "dependencies": {
+    "chalk": "^5.3.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^7.4.5"
