--- a/src/29-Auth-JWT/package.json
+++ b/src/29-Auth-JWT/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "proyecto_final",
+  "name": "Auth y JWT",
   "version": "1.0.0",
-  "description": "Proyecto final del curso de Dani Segovia",
-  "main": "src/index.js",
+  "description": "Auth y JWT",
+  "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/index.js",
-    "start": "node src/index.js"
+    "dev": "nodemon index.js",
+    "start": "node index.js"
   },
   "author": "Sergio Ortega",
   "license": "MIT",
