--- a/src/29-Auth-JWT/package.json
+++ b/src/29-Auth-JWT/package.json
@@ -2,12 +2,12 @@
   "name": "Auth y JWT",
   "version": "1.0.0",
   "description": "Auth y JWT",
-  "main": "index.js",
+  "main": "src/index.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js",
-    "start": "node index.js"
+    "dev": "nodemon src/index.js",
+    "start": "node src/index.js"
   },
   "author": "Sergio Ortega",
   "license": "MIT",
